--- a/app/src/main/res/drawable/shape_icon2.xml
+++ b/app/src/main/res/drawable/shape_icon2.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<stroke android:color="#E6903B" android:width="1dp"/>
+<solid android:color="#FFFFFF"/>
+    <corners android:bottomLeftRadius="1000dp" android:topRightRadius="1000dp"/>
 </shape>
