--- a/app/src/main/res/layout/activity_xac_nhan.xml
+++ b/app/src/main/res/layout/activity_xac_nhan.xml
@@ -9,32 +9,9 @@
     android:background="@color/white"
     tools:context=".XacNhan_Activity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/logo3"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Đăng nhập"
-                android:textColor="#E6903B"
-                android:textSize="40dp"
-                android:textStyle="bold"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </ScrollView>
+   <androidx.fragment.app.FragmentContainerView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:id="@+id/fcv_xacthuc"/>
 
 </LinearLayout>
