--- a/app/src/main/res/layout/fragment_quan_ly_khach_hang.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_khach_hang.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".fragment.QuanLyKhachHang">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fcv_Admin"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_qlkh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/ibtn_them_kh"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FF9800"
-        app:itemActiveIndicatorStyle="@drawable/shape_icon2"
-        app:menu="@menu/adminquanly" />
-
+        android:layout_gravity="end"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/more" />
 </LinearLayout>
