--- a/app/src/main/res/menu/adminquanly.xml
+++ b/app/src/main/res/menu/adminquanly.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/menu_qlnv"
-        android:icon="@drawable/people"
-        android:title="" />
-    <item
-        android:id="@+id/menu_qlkh"
-        android:icon="@drawable/call"
-        android:title="" />
-    <item
-        android:id="@+id/menu_hotro"
-        android:icon="@drawable/call"
-        android:title="" />
-    <item
-        android:id="@+id/menu_thongke"
-        android:icon="@drawable/call"
-        android:title="" />
-    <item
-        android:id="@+id/menu_resetpass"
+<item android:id="@+id/menu_qlnv"
+    android:title=""
+    android:icon="@drawable/people"
+    />
+    <item android:id="@+id/menu_qlkh"
+        android:icon="@drawable/many_people"
+        android:title=""
+        />
+    <item android:id="@+id/menu_thongke"
+        android:title=""
+        android:icon="@drawable/stockmarket"
+        />
+    <item android:id="@+id/menu_qlsv"
+        android:title=""
+        android:icon="@drawable/hiking"
+        />
+
+    <item android:id="@+id/menu_resetpass"
+        android:title=""
         android:icon="@drawable/resetpassword"
-        android:title="" />
+        />
 
 </menu>
