--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -52,6 +52,7 @@
                 android:hint="Password"
                 android:textColorHint="#E6903B"
                 android:padding="10dp"
+                android:inputType="textPassword"
                 android:textColor="#E6903B"
                 android:searchResultHighlightColor="#E6903B"
                 android:layout_marginTop="10dp"
@@ -72,6 +73,7 @@
                     android:text="Đăng nhập"
                     tools:ignore="HardcodedText"
                     android:padding="10dp"
+
                     android:textColor="#E6903B"
                     android:textStyle="bold"
                     android:layout_margin="10dp"
