--- a/app/src/main/res/layout/activity_man_hinh_admin.xml
+++ b/app/src/main/res/layout/activity_man_hinh_admin.xml
@@ -6,8 +6,14 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".ManHinhAdmin">
-
+    >
+<androidx.appcompat.widget.Toolbar
+    android:layout_width="match_parent"
+    android:layout_height="?actionBarSize"
+    android:background="#FF9800"
+    android:id="@+id/toolbar_admin"
+    app:menu="@menu/menu_toolbar"
+    />
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcv_Admin"
         android:layout_width="match_parent"
