--- a/app/src/main/res/layout/activity_man_hinh_admin.xml
+++ b/app/src/main/res/layout/activity_man_hinh_admin.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical"
-    >
-<androidx.appcompat.widget.Toolbar
-    android:layout_width="match_parent"
-    android:layout_height="?actionBarSize"
-    android:background="#FF9800"
-    android:id="@+id/toolbar_admin"
-    app:menu="@menu/menu_toolbar"
-    />
+    android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_admin"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="#FF9800"
+        app:menu="@menu/menu_toolbar" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcv_Admin"
         android:layout_width="match_parent"
@@ -21,6 +21,7 @@
         android:layout_weight="1" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bnv_Admin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FF9800"
