--- a/app/src/main/res/layout/fragment_quan_ly_giay.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_giay.xml
@@ -15,8 +15,8 @@
         android:layout_weight="1" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="end"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
