--- a/app/src/main/res/layout/item_quan_ly_giay.xml
+++ b/app/src/main/res/layout/item_quan_ly_giay.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:orientation="horizontal"
     android:background="@drawable/shape_item"
-    android:padding="5dp"
+    android:padding="10dp"
+    android:layout_margin="5dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
