--- a/app/src/main/res/menu/nhanvienquanly.xml
+++ b/app/src/main/res/menu/nhanvienquanly.xml
@@ -4,12 +4,12 @@
 
     <item android:id="@+id/menu_nhanvien_qlsp"
         android:title=""
-        android:icon="@drawable/hiking"
+        android:icon="@drawable/sportshoe"
         />
 
     <item android:id="@+id/menu_nhanvien_thongke"
         android:title=""
-        android:icon="@drawable/stockmarket"
+        android:icon="@drawable/barchart"
         />
     <item android:id="@+id/menu_nhanvien_qlhd"
         android:title=""
