--- a/app/src/main/res/layout/item_cuahang.xml
+++ b/app/src/main/res/layout/item_cuahang.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -14,24 +15,25 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="Hàng mới về"
+                android:text=""
                 android:textColor="#FF9800"
-                android:textStyle="normal"
+                android:textStyle="bold"
                 android:id="@+id/tv_tenhang"
                 android:textSize="16dp"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:id="@+id/ll_xemthem_moi"
                 >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Xem thêm"
+                    android:text=""
                     android:textColor="#FF9800"
                     android:textStyle="normal"
-                    android:textSize="16dp"/>
+                    android:textSize="16dp"
+                    android:id="@+id/ll_xemthem_moi"
+                    />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
