--- a/app/src/main/res/layout/dialog_nhanvien.xml
+++ b/app/src/main/res/layout/dialog_nhanvien.xml
@@ -14,6 +14,8 @@
         android:layout_margin="10dp"
         android:background="@drawable/shape_edittext"
         android:hint="Nhập Email"
+        android:textColor="#E6903B"
+        android:textColorHint="#E6903B"
         android:padding="10dp" />
 
     <EditText
@@ -23,6 +25,8 @@
         android:layout_margin="10dp"
         android:background="@drawable/shape_edittext"
         android:hint="Nhập mật khẩu"
+        android:textColor="#E6903B"
+        android:textColorHint="#E6903B"
         android:padding="10dp" />
 
     <EditText
@@ -32,6 +36,8 @@
         android:layout_margin="10dp"
         android:background="@drawable/shape_edittext"
         android:hint="Nhập họ tên"
+        android:textColor="#E6903B"
+        android:textColorHint="#E6903B"
         android:padding="10dp" />
 
     <EditText
@@ -40,6 +46,8 @@
         android:layout_height="50dp"
         android:layout_margin="10dp"
         android:background="@drawable/shape_edittext"
+        android:textColor="#E6903B"
+        android:textColorHint="#E6903B"
         android:hint="Nhập số điện thoại"
         android:padding="10dp" />
 
