--- a/app/src/main/res/layout/item_kichco.xml
+++ b/app/src/main/res/layout/item_kichco.xml
@@ -3,14 +3,15 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="100dp"
-    android:backgroundTint="#D9D9D9"
-    app:cardCornerRadius="100dp">
+    android:backgroundTint="#FFC107"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="10dp">
 <TextView
     android:layout_width="40dp"
     android:layout_height="20dp"
     android:textStyle="bold"
     android:text="43"
+    android:textColor="@color/black"
     android:gravity="center"
-    android:id="@+id/tv_kichco_show"/>
+    android:id="@+id/tv_kichco_show1"/>
 </androidx.cardview.widget.CardView>
