--- a/app/src/main/res/layout/activity_sanpham_show.xml
+++ b/app/src/main/res/layout/activity_sanpham_show.xml
@@ -4,12 +4,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:padding="10dp">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-       >
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,6 +75,10 @@
                     android:layout_weight="1"
                     android:id="@+id/rcv_listco"/>
             </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
@@ -90,5 +92,5 @@
                 />
         </LinearLayout>
 
-    </ScrollView>
+
 </LinearLayout>
