--- a/app/src/main/res/layout/activity_man_hinh_admin.xml
+++ b/app/src/main/res/layout/activity_man_hinh_admin.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="#FF9800"
+        app:titleTextColor="@color/white"
         app:menu="@menu/menu_toolbar" />
 
     <androidx.fragment.app.FragmentContainerView
