--- a/app/src/main/res/layout/activity_man_hinh_khach_hang.xml
+++ b/app/src/main/res/layout/activity_man_hinh_khach_hang.xml
@@ -12,6 +12,7 @@
         android:layout_height="?actionBarSize"
         android:background="#FF9800"
         android:id="@+id/toolbar_khachhang"
+        app:titleTextColor="@color/white"
         app:menu="@menu/menu_toolbar"
         />
     <androidx.fragment.app.FragmentContainerView
@@ -26,5 +27,6 @@
         android:background="#FF9800"
         app:itemActiveIndicatorStyle="@drawable/shape_icon2"
         app:itemIconTint="@color/white"
+        android:id="@+id/bnv_khachhang"
         app:menu="@menu/khachhangquanly" />
 </LinearLayout>
