--- a/app/src/main/res/layout/activity_sanpham_show.xml
+++ b/app/src/main/res/layout/activity_sanpham_show.xml
@@ -7,8 +7,6 @@
     android:background="@color/white"
     android:padding="10dp">
 
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -75,6 +73,40 @@
                     android:layout_weight="1"
                     android:id="@+id/rcv_listco"/>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Số lượng: "/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:text="-"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:background="#FEC389"
+                    android:id="@+id/bnt_tru_soluong"/>
+                <EditText
+                    android:layout_width="70dp"
+                    android:layout_height="40dp"
+                    android:text="0"
+                    android:inputType="number"
+                    android:id="@+id/edt_soluong_show"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:text="+"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:background="#FEC389"
+                    android:id="@+id/bnt_cong_soluong"/>
+
+            </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -91,6 +123,5 @@
                 android:id="@+id/btn_themgio"
                 />
         </LinearLayout>
-
 
 </LinearLayout>
