--- a/app/src/main/res/layout/activity_thongtintaikhoan.xml
+++ b/app/src/main/res/layout/activity_thongtintaikhoan.xml
@@ -11,14 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:padding="10dp"
+        android:gravity=""
         >
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
             android:src="@drawable/user1"
             android:scaleType="centerCrop"
             android:id="@+id/imv_avatar"
+            android:layout_marginLeft="20dp"
             />
             <LinearLayout
                 android:layout_width="0dp"
