--- a/app/src/main/res/layout/activity_man_hinh_nhan_vien.xml
+++ b/app/src/main/res/layout/activity_man_hinh_nhan_vien.xml
@@ -25,5 +25,6 @@
         android:background="#FF9800"
         app:itemActiveIndicatorStyle="@drawable/shape_icon2"
         app:itemIconTint="@color/white"
+        android:id="@+id/bnv_NhanVien"
         app:menu="@menu/nhanvienquanly" />
 </LinearLayout>
