--- a/app/src/main/res/layout/dialog_quenpass.xml
+++ b/app/src/main/res/layout/dialog_quenpass.xml
@@ -1,43 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@drawable/shape_none"
-    app:cardCornerRadius="10dp"
-    android:layout_height="wrap_content">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:background="@color/white"
-        android:padding="10dp"
-        android:layout_height="wrap_content">
-<TextView
-    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Nhập Email của bạn"
-    android:textSize="24dp"
-    android:textStyle="bold"
-    android:textColor="#E6903B"
-    android:layout_margin="10dp"/>
+    android:background="@drawable/shape_none"
+    android:orientation="vertical"
+    app:cardCornerRadius="10dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Nhập Email của bạn"
+            android:textColor="#E6903B"
+            android:textSize="24dp"
+            android:textStyle="bold" />
+
         <EditText
+            android:id="@+id/edt_email_quen"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/shape_edittext"
             android:hint="Email"
             android:padding="10dp"
             android:textColor="#E6903B"
-            android:textColorHint="#E6903B"
-            android:id="@+id/edt_email_quen"/>
+            android:textColorHint="#E6903B" />
+
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_quen"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/shape_btn"
             android:layout_marginTop="10dp"
+            android:background="@drawable/shape_btn"
             android:text="Quên mật khẩu"
             android:textColor="@color/white"
-            android:textStyle="bold"
-            android:id="@+id/btn_quen"/>
+            android:textStyle="bold" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
