--- a/app/src/main/res/layout/fragment_thong_ke__doanh_thu.xml
+++ b/app/src/main/res/layout/fragment_thong_ke__doanh_thu.xml
@@ -6,46 +6,86 @@
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".fragment.ThongKe_DoanhThu">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="20dp">
-        <EditText
-            android:id="@+id/edt_ngayMin"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_margin="10dp"
-            android:drawableStart="@drawable/baseline_calendar_month_24" />
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edt_ngayMax"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_margin="10dp"
-            android:drawableStart="@drawable/baseline_calendar_month_24" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_chonNgayStart"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:drawableStart="@drawable/baseline_calendar_month_24"/>
+            <EditText
+                android:id="@+id/edt_ngayStart"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:inputType="none"
+                android:textStyle="bold"
+                android:hint="Ngày bắt đầu"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/black" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_chonNgayEnd"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:drawableStart="@drawable/baseline_calendar_month_24"/>
+            <EditText
+                android:id="@+id/edt_ngayEnd"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:clickable="false"
+                android:textStyle="bold"
+                android:hint="Ngày kết thúc"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:inputType="none"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/black" />
+        </LinearLayout>
 
     </LinearLayout>
 
-  <LinearLayout
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:layout_gravity="center"
-      android:layout_marginTop="20dp">
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Doanh thu: "
-          android:textColor="@color/black"
-          android:textStyle="bold"
-          android:textSize="20dp"/>
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="1000000"
-          android:textColor="@color/black"
-          android:textStyle="bold"
-          android:textSize="20dp"/>
-  </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Doanh thu: "
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_doanhThu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1000000"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
