--- a/app/src/main/res/layout/tab_thongtincanhan.xml
+++ b/app/src/main/res/layout/tab_thongtincanhan.xml
@@ -165,6 +165,7 @@
         android:layout_gravity="bottom"
         android:layout_margin="20dp"
         android:background="#FFC58B"
+        android:id="@+id/ll_dangxuat"
         app:layout_constraintBottom_toBottomOf="parent">
 <TextView
     android:layout_width="0dp"
