--- a/app/src/main/res/layout/item_ql_don_hang.xml
+++ b/app/src/main/res/layout/item_ql_don_hang.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_margin="5dp"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical">
 
 
     <LinearLayout
+        android:padding="10dp"
         android:background="#D9D9D9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
