--- a/app/src/main/res/layout/item_ql_don_hang.xml
+++ b/app/src/main/res/layout/item_ql_don_hang.xml
@@ -60,7 +60,7 @@
                     android:text="Giá" />
 
                 <TextView
-                    android:id="@+id/tv_soLuong"
+                    android:id="@+id/tv_soLuong_"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Số lượng" />
