--- a/app/src/main/res/layout/fragment_thong_ke__doanh_thu.xml
+++ b/app/src/main/res/layout/fragment_thong_ke__doanh_thu.xml
@@ -63,7 +63,16 @@
         </LinearLayout>
 
     </LinearLayout>
-
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_doanhThu"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/shape_btn"
+        android:text="Doanh thu"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,7 +83,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Doanh thu: "
+            android:text="Tổng doanh thu: "
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -83,8 +92,8 @@
             android:id="@+id/tv_doanhThu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1000000"
-            android:textColor="@color/black"
+            android:text="0$"
+            android:textColor="#FF1100"
             android:textSize="20dp"
             android:textStyle="bold" />
     </LinearLayout>
