--- a/app/src/main/res/layout/item_ql_don_hang.xml
+++ b/app/src/main/res/layout/item_ql_don_hang.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_margin="5dp"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/shape_item"
     android:orientation="vertical">
 
 
@@ -16,12 +16,13 @@
 
         <ImageView
             android:id="@+id/imgv_anhsp"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:background="@drawable/logo1" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_marginTop="30dp"
@@ -80,7 +81,7 @@
                     android:id="@+id/ibtn_XacNhan"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginLeft="130dp"
+                    android:layout_marginLeft="100dp"
                     android:background="@drawable/accept"/>
             </LinearLayout>
 
