--- a/app/src/main/res/layout/dialog_them_hang.xml
+++ b/app/src/main/res/layout/dialog_them_hang.xml
@@ -42,6 +42,7 @@
             android:background="@drawable/shape_edittext"
             android:textColor="#E6903B"
             android:textColorHint="#E6903B"
+            android:textSize="15dp"
             android:hint="Nhập hãng muốn thêm"/>
 
         <ImageButton
