--- a/app/src/main/res/layout/item_quan_ly_khach_hang.xml
+++ b/app/src/main/res/layout/item_quan_ly_khach_hang.xml
@@ -12,8 +12,8 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content">
         
-        <TextView
-            android:layout_width="match_parent"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/user1"/>
 
