--- a/app/src/main/res/layout/item_giohang.xml
+++ b/app/src/main/res/layout/item_giohang.xml
@@ -87,15 +87,16 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <TextView
+                        android:id="@+id/tv_mua_giohang"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Mua"
+                        android:layout_height="24dp"
+                        android:layout_marginTop="5dp"
                         android:background="@color/white"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
-                        android:layout_marginTop="5dp"
-                        android:id="@+id/tv_mua_giohang"/>
+                        android:text="Mua" />
 
                     <TextView
                         android:layout_width="wrap_content"
