--- a/app/src/main/res/layout/item_ql_don_hang.xml
+++ b/app/src/main/res/layout/item_ql_don_hang.xml
@@ -12,21 +12,27 @@
         android:background="#D9D9D9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:text="ID"
+    android:textSize="20dp"
+    android:textStyle="bold"
+    android:textColor="@color/black"
+    android:id="@+id/tv_idDon"/>
 
-        <ImageView
-            android:id="@+id/imgv_anhsp"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:background="@drawable/logo1" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:orientation="vertical">
+            android:gravity="center"
+            android:orientation="horizontal">
             <LinearLayout
-                android:layout_marginTop="30dp"
-                android:layout_width="match_parent"
+
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
@@ -34,54 +40,66 @@
                     android:id="@+id/tv_tenKhach"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="Tên khách hàng" />
 
                 <TextView
                     android:id="@+id/tv_diaChi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="Địa chỉ" />
 
                 <TextView
                     android:id="@+id/tv_sdt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="Sđt" />
 
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
 
                 <TextView
                     android:id="@+id/tv_gia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="Giá" />
 
                 <TextView
                     android:id="@+id/tv_soLuong_"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="Số lượng" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_marginTop="15dp">
-                <ImageButton
-                    android:id="@+id/ibtn_Huy"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:background="@drawable/remove"/>
-                <ImageButton
-                    android:id="@+id/ibtn_XacNhan"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="100dp"
-                    android:background="@drawable/accept"/>
             </LinearLayout>
 
         </LinearLayout>
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="15dp">
+            <ImageButton
+                android:id="@+id/ibtn_Huy"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/remove"/>
+            <ImageButton
+                android:id="@+id/ibtn_XacNhan"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="100dp"
+                android:background="@drawable/accept"/>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
