--- a/app/src/main/res/layout/activity_man_hinh_nhan_vien.xml
+++ b/app/src/main/res/layout/activity_man_hinh_nhan_vien.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="#FF9800"
+        app:titleTextColor="@color/white"
         android:id="@+id/toolbar_nhanvien"
         app:menu="@menu/menu_toolbar"
         />
