--- a/app/src/main/res/layout/dialog_nhanvien.xml
+++ b/app/src/main/res/layout/dialog_nhanvien.xml
@@ -38,6 +38,7 @@
         android:hint="Nhập số điện thoại"
         android:textColorHint="@color/vang"
         android:maxLength="10"
+        android:inputType="number"
         android:textColor="#E6903B"
         android:padding="10dp" />
 
