--- a/app/src/main/res/layout/dialog_updateprofile.xml
+++ b/app/src/main/res/layout/dialog_updateprofile.xml
@@ -57,6 +57,7 @@
                android:hint="Số điện thoại"
                android:padding="10dp"
                android:inputType="number"
+               android:maxLength="10"
                android:textColor="#E6903B"
                android:textColorHint="#E6903B"
                android:layout_marginBottom="10dp"
