--- a/app/src/main/res/layout/fragment_quan_ly_khach_hang.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_khach_hang.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragment.QuanLyKhachHang">
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_KH"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginBottom="10dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_qlkh"
