--- a/app/src/main/res/layout/fragment_quan_ly_nhan_vien.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_nhan_vien.xml
@@ -8,6 +8,12 @@
     android:orientation="vertical"
     tools:context=".fragment.QuanLyNhanVien">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_NV"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginBottom="10dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_nhanVien"
         android:layout_width="match_parent"
