--- a/app/src/main/res/layout/item_quan_ly_khach_hang.xml
+++ b/app/src/main/res/layout/item_quan_ly_khach_hang.xml
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_marginLeft="5dp"
         android:layout_weight="1"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         >
         <TextView
