--- a/app/src/main/res/layout/activity_show_more.xml
+++ b/app/src/main/res/layout/activity_show_more.xml
@@ -44,5 +44,6 @@
         android:id="@+id/rcv_list_sanPham_more"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="10dp"
         android:layout_weight="1" />
 </LinearLayout>
