--- a/app/src/main/res/layout/tab_thongtincanhan.xml
+++ b/app/src/main/res/layout/tab_thongtincanhan.xml
@@ -156,7 +156,40 @@
                 android:background="#E6903B" />
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/ll_lichnap"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Lịch sử"
+                    android:textColor="#E6903B"
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=">"
+                    android:textColor="#E6903B"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="#E6903B" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
