--- a/app/src/main/res/layout/fragment_frg__quan_ly_k_h__l_s.xml
+++ b/app/src/main/res/layout/fragment_frg__quan_ly_k_h__l_s.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".fragment.frg_ThongKe">
+    tools:context=".fragment.Frg_QuanLyKH_LS">
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
+        android:id="@+id/tab_layout_kh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -18,8 +18,8 @@
         app:tabTextColor="@color/black" />
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager2"
+        android:id="@+id/view_pager2_kh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
