--- a/app/src/main/res/menu/adminquanly.xml
+++ b/app/src/main/res/menu/adminquanly.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/menu_admin_qlnv"
-    android:title=""
-    android:icon="@drawable/people"
-    />
-    <item android:id="@+id/menu_admin_qlkh"
+    <item
+        android:id="@+id/menu_admin_qlnv"
+        android:icon="@drawable/people"
+        android:title="" />
+    <item
+        android:id="@+id/menu_admin_qlkh"
         android:icon="@drawable/many_people"
-        android:title=""
-        />
-    <item android:id="@+id/menu_admin_thongke"
-        android:title=""
+        android:title="" />
+    <item
+        android:id="@+id/menu_admin_thongke"
         android:icon="@drawable/barchart"
-        />
-    <item android:id="@+id/menu_admin_qlsp"
-        android:title=""
+        android:title="" />
+    <item
+        android:id="@+id/menu_admin_qlsp"
         android:icon="@drawable/sportshoe"
-        />
-    <item android:id="@+id/menu_admin_lichsunap"
-        android:title=""
-        android:icon="@drawable/history"
-        />
-    <item android:id="@+id/menu_admin_resetpass"
-        android:title=""
+        android:title="" />
+    <item
+        android:id="@+id/menu_admin_resetpass"
         android:icon="@drawable/resetpassword"
-        />
+        android:title="" />
 
 </menu>
